--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Param Aggarwal",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=0.13"
+    "react": "^0.13"
   },
   "dependencies": {
     "attr-accept": "^1.0.3"
